2012-12-20  Anders Carlsson  <andersca@apple.com>

        Stop building WebKit2 for Windows
        https://bugs.webkit.org/show_bug.cgi?id=105585

        Reviewed by Brian Weinstein.

        Remove an unneeded export.

        * win/WebKit2.def.in:

2012-12-20  Ryuan Choi  <ryuan.choi@samsung.com>

        [EFL] Build break with latest EFL libraries.
        https://bugs.webkit.org/show_bug.cgi?id=104827

        Reviewed by Laszlo Gombos.

        The eo EFL package is introduced and evas and ecore use it since 1.8.
        While introducing Eo, EFL changed several structures of Evas and Ecore
        from own specific class to Eo.

        So, this patch adds FindEo and changes declaration of Evas, Evas_Object,
        Ecore_Timer to build with latest EFL libraries.

        * PlatformEfl.cmake: Includes eo EFL library.
        * UIProcess/API/C/efl/WKAPICastEfl.h: Modified declaration of Evas_Object.
        * UIProcess/API/C/efl/WKView.h: Modified declaration of Evas.
        * UIProcess/efl/WebPopupMenuProxyEfl.h: Removed unnecessary declaration.

2012-12-20  Helder Correia  <helder.correia@nokia.com>

        [CoordGfx] Remove CoordinatedLayerUpdateInfo class forwarding
        https://bugs.webkit.org/show_bug.cgi?id=105588

        Reviewed by Noam Rosenthal.

        There is no such class.

        * UIProcess/CoordinatedGraphics/CoordinatedLayerTreeHostProxy.h:
        (WebKit):
        * UIProcess/CoordinatedGraphics/LayerTreeRenderer.h:
        (WebKit):

2012-12-20  Pratik Solanki  <psolanki@apple.com>

        Rename HAVE(NETWORK_CFDATA_ARRAY_CALLBACK) to USE(NETWORK_CFDATA_ARRAY_CALLBACK)
        https://bugs.webkit.org/show_bug.cgi?id=105578

        Reviewed by Alexey Proskuryakov.

        * NetworkProcess/NetworkResourceLoader.cpp:
        * NetworkProcess/NetworkResourceLoader.h:

2012-12-20  Alexey Proskuryakov  <ap@apple.com>

        LocalTerminationDisabler is not needed in WebCookieManager.cpp