@@ -44,10 +44,21 @@ void ChildProcess::setApplicationIsOccluded(bool applicationIsOccluded)
 #endif
 }
 
+#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 1090
+static void initializeTimerCoalescingPolicy()
+{
+    // Set task_latency and task_throughput QOS tiers as appropriate for a visible application.
+    struct task_qos_policy qosinfo = { LATENCY_QOS_TIER_0, THROUGHPUT_QOS_TIER_0 };
+    kern_return_t kr = task_policy_set(mach_task_self(), TASK_BASE_QOS_POLICY, (task_policy_t)&qosinfo, TASK_QOS_POLICY_COUNT);
+    ASSERT_UNUSED(kr, kr == KERN_SUCCESS);
+}
+#endif
+
 void ChildProcess::platformInitialize()
 {
 #if __MAC_OS_X_VERSION_MIN_REQUIRED >= 1090
     setpriority(PRIO_DARWIN_PROCESS, 0, 0);
+    initializeTimerCoalescingPolicy();
 #endif
     setApplicationIsOccluded(false);
 }
